--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,16 +1,21 @@
 .logo{
+    
     background-image: url("../images/band.jpg");
-    background-repeat:no-repeat;
-    background-size: cover;
-    background-position:relative;
+    width: 100%;
+    height: auto;
+    padding-bottom:50px;
+    background-size: 100% 100%;
+    background-repeat: repeat;
+    margin-bottom: 0;
 }
+
 .responsive {
-    width: 30%;
+    width: 25%;
     height: auto;
 }
 
 header{
-    padding-top: 50px;
+    padding-top:100px;
     color: white;
     background-color: black;
     clear: left;
